--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,14 +10,16 @@
         <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['pricing']">Pricing</a>
+        <a class="nav-link" [routerLink]="['pricing']">Pricing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['protected']">Protected</a>
+        <a class="nav-link" [routerLink]="['protected']">Protected</a>
       </li>
     </ul>
     <span class="navbar-text">
-      Navbar text with an inline element
-    </span>
+    <button type="button" class="btn btn-outline-primary" (click)="login()">
+      Login
+    </button>    
+  </span>
   </div>
 </nav>
