--- a/src/app/components/protected/protected.component.html
+++ b/src/app/components/protected/protected.component.html
@@ -1,3 +1,25 @@
-<p>
-  protected works!
-</p>
+<div class="row" *ngIf="profile">
+  <div class="col-sm-4">
+    <img class="img-fluid" [src]="profile.picture" alt="">
+  </div>
+  <div class="col-sm-8">
+    <ul class="list-group">
+      <li class="list-group-item">
+        {{profile.name}}
+      </li>
+      <li class="list-group-item">
+        {{profile.gender}}
+      </li>
+      <li class="list-group-item">
+        {{profile.updated_at | date:'dd mm yyyy'}}
+      </li>
+    </ul>
+  </div>
+
+</div>
+
+<br><br>
+
+<pre>
+    {{ profile | json }}
+</pre>
